<resources>
    <string name="app_name">AccountabiliBuddy</string>

    <string name="action_settings">Settings</string>
    <string name="add">Add</string>
    <string name="prompt_name">Enter name...</string>
    <string name="prompt_phone">Enter phone number...</string>
    <string name="prompt_desc">Enter description...</string>
    <string name="send">Send</string>
    <string name="no_buddies">No Buddies Saved</string>
    <string name="no_missions">No Missions Saved</string>
    <string name="add_buddy">Add Buddy...</string>
    <string name="add_mission">Add Mission...</string>
    <string name="type_message">Enter a message...</string>
    <string name="sent_to">Sent to:</string>

    <string name="title_activity_buddy">BuddyActivity</string>
    <string name="title_activity_mission">MissionActivity</string>
</resources>
