<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="openBuddyActivity">

        <TextView
            android:id="@+id/current_buddy"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minLines="2"
            android:text="@string/no_buddies"
            android:textSize="25sp" />

        <Button
            android:id="@+id/add_buddy"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/add"
            android:onClick="openBuddyActivity" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="openMissionActivity" >

        <TextView
            android:id="@+id/current_mission"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minLines="2"
            android:text="@string/no_missions"
            android:textSize="25sp" />

        <Button
            android:id="@+id/add_mission"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/add"
            android:onClick="openMissionActivity" />

    </LinearLayout>

    <EditText
        android:id="@+id/message"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/type_message"
        android:minLines="5"/>

    <Button
        android:id="@+id/send_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:onClick="sendMessage" />

</LinearLayout>
